Sugati/src/objects/Supplier__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Terms_Deposit__c</fullName>
        <inlineHelpText>In Percentage</inlineHelpText>
        <label>Payment Terms - Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_in_Days__c</fullName>
        <label>Payment Terms in Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S1_Account_Number_IBAN__c</fullName>
        <label>1. Account Number/IBAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S1_Bank_Address_Line_1__c</fullName>
        <label>1. Bank Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Bank_Address_Line_2__c</fullName>
        <label>1. Bank Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_City__c</fullName>
        <label>1. City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Country__c</fullName>
        <label>1. Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Payee_Bank_Name__c</fullName>
        <label>1. Payee Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Postcode__c</fullName>
        <label>1. Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Routing_Code__c</fullName>
        <label>1. Routing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Swift_Code__c</fullName>
        <label>1. Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Account_Number_IBAN__c</fullName>
        <label>2. Account Number/IBAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2_Bank_Address_Line_1__c</fullName>
        <label>2. Bank Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Bank_Payee_Currency__c</fullName>
        <label>2. Bank Payee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S2_City__c</fullName>
        <label>2. City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Country__c</fullName>
        <label>2. Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Payee_Bank_Name__c</fullName>
        <label>2. Payee Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_PostCode__c</fullName>
        <label>2. PostCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Routing_Code__c</fullName>
        <label>2. Routing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Swift_Code__c</fullName>
        <label>2. Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Arrivals__c</fullName>
        <label>Arrivals</label>
        <picklist>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Bank_Payee_Currency__c</fullName>
        <label>1.Bank Payee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Billing_Country__c</fullName>
        <formula>S_Country__c</formula>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Billing_Post_Code__c</fullName>
        <label>Billing Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Billing_Street__c</fullName>
        <description>Billing Street</description>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Booking_Confirmation__c</fullName>
        <label>Booking Confirmation</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Commission_Value__c</fullName>
        <description>Agent Commission</description>
        <inlineHelpText>Agent Commission</inlineHelpText>
        <label>Commission Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S_Commission__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_Continent__c</fullName>
        <formula>IF(ISBLANK(S_What_to_do__c) , S_Where_to_go__r.W_Continent__c , S_What_to_do__r.WH_Continent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Country__c</fullName>
        <formula>IF(ISBLANK(S_What_to_do__c) ,  S_Where_to_go__r.W_Country__r.Name ,  S_What_to_do__r.WH_Country__r.Name )</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S_Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>S_Emergency_Phone_2__c</fullName>
        <label>Emergency Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_Emergency_Phone__c</fullName>
        <label>Emergency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_Estimated_Cost__c</fullName>
        <inlineHelpText>Only For Accommodation</inlineHelpText>
        <label>Estimated Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Holiday_Types__c</fullName>
        <label>Holiday Types</label>
        <picklist>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Short Breaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeymoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stag/Hen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert-Led Journeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dive In Style</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_Operating_Countries__c</fullName>
        <label>Operating Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borneo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Payment_From_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment From Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Payment_Terms_Deposit__c</fullName>
        <inlineHelpText>In Percentage</inlineHelpText>
        <label>Payment Terms - Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_Payment_Terms_in_Days__c</fullName>
        <label>Payment Terms in Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Payments__c</fullName>
        <label>Payments</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Rating__c</fullName>
        <inlineHelpText>Only For Accommodation</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should be checked if you want to show the supplier as recommended in the suggestion.</inlineHelpText>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Requests__c</fullName>
        <label>Requests</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Skype__c</fullName>
        <label>Skype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Total_Bed_Nights__c</fullName>
        <description>Total Bed Nights where applicable spent with the supplier</description>
        <label>Total Bed Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Total_Commission_Value__c</fullName>
        <description>Total Commission Revenue the Supplier has generated so far.</description>
        <inlineHelpText>Total Commission Revenue the Supplier has generated.</inlineHelpText>
        <label>Total Commission Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tourist Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>S_What_to_do__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>What to do</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Suppliers</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_Widgety_Reference_ID__c</fullName>
        <label>Widgety Reference ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Your_Guide__c</fullName>
        <label>Your Guide</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X2_Bank_Payee_Currency__c</fullName>
        <label>2. Bank Payee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>Agency_list</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>S_Type__c</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filters>
        <label>Agency list</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>S_Email__c</columns>
        <columns>S_Mobile__c</columns>
        <columns>S_Commission__c</columns>
        <columns>S_Billing_City__c</columns>
        <columns>S_Billing_Country__c</columns>
        <columns>S_Billing_Post_Code__c</columns>
        <columns>S_Billing_State__c</columns>
        <columns>S_Billing_Street__c</columns>
        <columns>S_Type__c</columns>
        <columns>S_Operating_Countries__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DMC_List</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>S_Type__c</field>
            <operation>equals</operation>
            <value>DMC</value>
        </filters>
        <label>DMC list</label>
    </listViews>
    <listViews>
        <fullName>Hotel_list</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>S_Type__c</field>
            <operation>equals</operation>
            <value>Hotel</value>
        </filters>
        <label>Hotel list</label>
    </listViews>
    <listViews>
        <fullName>Supplier_Without_TC</fullName>
        <columns>NAME</columns>
        <columns>S_Type__c</columns>
        <columns>S1_Country__c</columns>
        <columns>S_Country__c</columns>
        <columns>S_Operating_Countries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>S2_Country__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>S_Operating_Countries__c</field>
            <operation>equals</operation>
        </filters>
        <label>Supplier Without TC</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <recordTypes>
        <fullName>Accommodation</fullName>
        <active>true</active>
        <label>Accommodation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity</fullName>
        <active>true</active>
        <label>Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Boat</fullName>
        <active>true</active>
        <label>Boat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_Hire</fullName>
        <active>true</active>
        <label>Car Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMC</fullName>
        <active>true</active>
        <label>DMC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Driver</fullName>
        <active>true</active>
        <label>Driver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Driver_Guide</fullName>
        <active>true</active>
        <label>Driver Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flight</fullName>
        <active>true</active>
        <label>Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guide</fullName>
        <active>true</active>
        <label>Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxi</fullName>
        <active>true</active>
        <label>Taxi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tourist_Board</fullName>
        <active>true</active>
        <label>Tourist Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transport</fullName>
        <active>true</active>
        <label>Transport</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>